@@ -70,6 +70,7 @@ Release 0.9.1
 	is replaced with the new code; also, this will focrce completing the missing
 	bits in the model classes as it uses object - array mappings and back
 - moved zm_sql_patch(..) into ZMDbUtils::executePatch(..)
+- remove obsolete ZMService
 
 Release 0.9.0
 - move cache manager page from core to zm_page_cache plugin
